--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 <body>
   <script src="dist/bundle.js"></script>
   <script>
-    console.log(ThirdwebSDK);
-    // console.log(new sdk('polygon'));
-    console.log(ethers);
+    console.log('ThirdwebSDK => inside index.html file =>', ThirdwebSDK);
+    console.log('ethers => inside index.html file =>', ethers);
   </script>
 </body>
 </html>
